2008-07-17  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/glib-2.0.vapi:

	Fixed Priority by changing it from an enum to a namespace.

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Fix syntax error

2008-07-17  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/glib-2.0.vapi:

	Various fixes to enums, fixes bug 542362.

2008-07-17  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gdk-2.0/gdk-2.0.metadata:

	Made gc argument of gdk_drawable_draw_pixbuf nullable, fixes bug
	543000. Patch by Thijs Vermeir .

	* vapi/gdk-2.0.vapi:

	Regenerated.

2008-07-17  Jared Moore  <jaredm@svn.gnome.org>

	* vapigen/valagidlparser.vala:

	Added 'type_name' metadata to function to override its return type.

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata

	Changed gtk_selection_data_get_text to return a string, fixes bug
	540663.

	* vapi/gtk+-2.0.vapi:

	Regenerated.

2008-07-17  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valasignal.vala:

	Fixed error in handling formal parameters of signals, fixes bug
	542293.

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodetypesymbolbinding.vala:

	Support int64 and uint64 properties in GObjects,
	patch by Christian Hergert, fixes bug 543055

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Fix support for static and class fields in interface writer,
	based on patch by Daniel Lucraft, fixes bug 542879

2008-07-13  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/:

	Fix gdk_spawn_on_screen binding

	* vapi/gdk-2.0.vapi: regenerated

2008-07-12  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodememberaccessbinding.vala:

	Fix access to private struct fields, fixed bug 542032.

	* tests/structs.vala:
	* tests/structs.exp:

	Added test cases for private struct fields.

2008-07-12  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodemethodbinding.vala:

	Remove recent introduced gcc warnings related to abstract interface
	methods
