@@ -1,3 +1,11 @@
+2008-07-17  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valaparser.vala:
+	* vala/valascanner.vala:
+	* vala/valatokentype.vala:
+
+	Add parser support for internal symbol accessibility
+
 2008-07-17  Jared Moore  <jaredm@svn.gnome.org>
 
 	* vapi/glib-2.0.vapi:
